Remove superfluous opening of java.nio module